created the template and added all the content for the homepage and the first feb entry.

--- a/feb.html
+++ b/feb.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title>Major Project Blogs</title>
+<title>Major Project - February</title>
 <link rel="stylesheet" href="styles.css">
 
 <head>
@@ -15,8 +15,8 @@
         </div>
 
         <div class="navbar">
-            <a class="active" href="home.html">Home</a>
-            <a href="feb.html">February</a>
+            <a href="home.html">Home</a>
+            <a class="active" href="feb.html">February</a>
             <a href="march.html">March</a>
             <a href="april.html">April</a>
             <a href="may.html">May</a>
@@ -25,43 +25,24 @@
 
         <div class="row">
             <div class="leftcolumn">
-                <div class="homecard">
-                    <h2>Welcome to my blog!</h2>
-                    <h3>1st of February, 2021</h3>
-                    <p>Here you will find details on the progress being made! Along with the time spent on these parts :)</p>
-                </div>
                 <div class="card">
-                    <h2>Template for UI Spec</h2>
-                    <h5>11th of February, 2021</h5>
-                    <p>After our tutorial the group decided to meet in dicsord to discuss improvements to the User Interface and Test Specifications. I tried to be of help so decided to make a template for the User Interface spec that adheres to the standards
-                        of SEQA2 and SEQA4. I am hoping that itll be useful and am planning on making one for Testing as well.</p>
-                    <p>Total time: approx 2hrs</p>
+                    <h2>First February Entry.</h2>
+                    <h3>4th of February, 2022</h3>
+                    <p> So far I have created a template for the blog. Next, I will need to work on the project outline.</p>
+                    <p>Total time: approx 3hrs</p>
                 </div>
-                <div class="card">
+
+                <!-- <div class="card">
                     <h2>Creating a configuration list</h2>
-                    <h5>7th of February, 2021</h5>
+                    <h3>7th of February, 2021</h3>
                     <img src="config_ref.png" alt="Config Ref" style="width:400px;padding: 0px;">
                     <p>Tried having a go at creating a configuration list as specified in SEQA8. Its definitely a draft at the moment but was good trying to figure out how documents and how the config_refs section will work. Hoping that I can improve the
                         current config ref list I made for the future. As this one is a bit too brief </p>
                     <p>Total time: approx 0.5hrs</p>
-                </div>
-                <div class="card">
-                    <h2>Assigning roles and creating the GitLab repository</h2>
-                    <h5>5th of February, 2021</h5>
-                    <p>We met up in discord and tried creating the group repository. We realised the QA manages and is responsible for the repository so we decided it would be best to assign roles at that point. Richard is Project Leader, Oliver is PL deputy,
-                        I am QA Manager, Ignacy is QA deputy </p>
-                    <p>Total time: approx 2hrs</p>
-                </div>
-                <div class="card">
-                    <h2>Group meeting & GitLab Practical</h2>
-                    <h5>3rd of February, 2021</h5>
-                    <p>As arranged in the tutorial the group met up and we managed to spend a few hours helping eachother working through the practical. The practical consisted of an individual section which was fairly straight forward and a section where
-                        a partner was needed. Me and Maciek [mam161] worked through this together, there was 1 error but we managed to get through it regardless. I did the practical on mac but I want to try using the windows method that consists of using
-                        gitBash as that seemed more challenging.</p>
-                    <p>Total time: approx 1.5hrs</p>
-                </div>
+                </div> -->
             </div>
         </div>
+    </div>
     </div>
 </body>
 
