--- a/home.html
+++ b/home.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title>Major Project Blogs</title>
+<title>Major Project Blog</title>
 <link rel="stylesheet" href="styles.css">
 
 <head>
@@ -24,12 +24,13 @@
         </div>
 
         <div class="homecard">
-            <div class="card">
-                <h2>Welcome to my blog!</h2>
-                <h3>1st of February, 2021</h3>
-                <p>Here you will find details on the progress being made! Along with the time spent on these parts :)</p>
-            </div>
+            <h2>Welcome to my major project blog.</h2>
+            <p>This blog will accompany me as I develop the project. </p>
+            <p>Here you will find details on the progress being made. Along with the time spent on each part.</p>
+            <p>The blog contains a section for each month. I split the project into months as it will provide some structure to separate the work.</p>
+            <p>There is also a section containing the project outline. There you will find a detailed report on what the project is and how I plan on developing it.</p>
         </div>
+
 
     </div>
 </body>
