--- a/outline.html
+++ b/outline.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title>Major Project - March</title>
+<title>Major Project - Outline</title>
 <link rel="stylesheet" href="styles.css">
 
 <head>
@@ -17,10 +17,10 @@
         <div class="navbar">
             <a href="home.html">Home</a>
             <a href="feb.html">February</a>
-            <a class="active" href="march.html">March</a>
+            <a href="march.html">March</a>
             <a href="april.html">April</a>
             <a href="may.html">May</a>
-            <a href="outline.html">Project Outline</a>
+            <a class="active" href="outline.html">Project Outline</a>
         </div>
 
         <div class="row">
