feb 5th entry added

--- a/feb.html
+++ b/feb.html
@@ -27,6 +27,14 @@
             <div class="leftcolumn">
                 <div class="card">
                     <h2>First February Entry.</h2>
+                    <h3>5th of February, 2022</h3>
+                    <p> Worked on the project outline. Completed the first and second section. 
+                        Was unsure of what to list on the deliverables, going to bring this up in next supervisor meeting.
+                        I have also received the data for crabs and lobsters so I will need to start looking at YOLO and ways to process this.</p>
+                    <p>Total time: approx 3hrs</p>
+                </div>
+                <div class="card">
+                    <h2>First February Entry.</h2>
                     <h3>4th of February, 2022</h3>
                     <p> So far I have created a template for the blog. Next, I will need to work on the project outline.</p>
                     <p>Total time: approx 3hrs</p>
