14th and 15th feb entry

--- a/feb.html
+++ b/feb.html
@@ -26,7 +26,25 @@
         <div class="row">
             <div class="leftcolumn">
                 <div class="card">
-                    <h2>First February Entry.</h2>
+                    <h2>More opencv and trello.</h2>
+                    <h3>15th of February, 2022</h3>
+                    <p> Need to set up trello today to keep track of what I need to do/am doing. 
+                        Although at the moment Ive managed to organise myself in my head, 
+                        I know it will reduce the workload of me remembering and show good skills in the report.</p>
+                    <p>Total time: approx 5hrs</p>
+                </div>
+                <div class="card">
+                    <h2>Valentines Day and opencv.</h2>
+                    <h3>14th of February, 2022</h3>
+                    <p>  After a busy period of time I managed to make a good start on the software.
+                        The first couple of hours I spent fixing a bug in opencv as the documentation was not displaying for anything. 
+                        That required a clean install of python. 
+                        After that however, I managed to get opencv to play a video and crop a rectangle from the centre of the original video. 
+                        Valentines day well spent.</p>
+                    <p>Total time: approx 5hrs</p>
+                </div>
+                <div class="card">
+                    <h2>Project Outline.</h2>
                     <h3>5th of February, 2022</h3>
                     <p> Worked on the project outline. Completed the first and second section. 
                         Was unsure of what to list on the deliverables, going to bring this up in next supervisor meeting.
