--- a/feb.html
+++ b/feb.html
@@ -29,9 +29,11 @@
                     <h2>More opencv and trello.</h2>
                     <h3>15th of February, 2022</h3>
                     <p> Need to set up trello today to keep track of what I need to do/am doing. 
-                        Although at the moment Ive managed to organise myself in my head, 
-                        I know it will reduce the workload of me remembering and show good skills in the report.</p>
-                    <p>Total time: approx 5hrs</p>
+                        Update: Set up trello and added all my tasks to it. Link: https://trello.com/b/PiACLT8c/major-project
+                        Update 2: Set up github project and set up the same development environment on my laptop.
+                        Update 3: Managed to connect my laptop camera to opencv to replicate real-time footage from on-board camera.
+                    </p>
+                    <p>Total time: approx hrs</p>
                 </div>
                 <div class="card">
                     <h2>Valentines Day and opencv.</h2>
