--- a/feb.html
+++ b/feb.html
@@ -28,29 +28,24 @@
                 <div class="card">
                     <h2>More opencv and trello.</h2>
                     <h3>15th of February, 2022</h3>
-                    <p> Need to set up trello today to keep track of what I need to do/am doing. 
-                        Update: Set up trello and added all my tasks to it. Link: https://trello.com/b/PiACLT8c/major-project
-                        Update 2: Set up github project and set up the same development environment on my laptop.
-                        Update 3: Managed to connect my laptop camera to opencv to replicate real-time footage from on-board camera.
-                    </p>
-                    <p>Total time: approx hrs</p>
+                    <p> Need to set up trello today to keep track of what I need to do/am doing.</p>
+                    <p>Update: Set up trello and added all my tasks to it. Link: https://trello.com/b/PiACLT8c/major-project</p>
+                    <p>Update 2: Set up github project and set up the same development environment on my laptop.</p>
+                    <p>Update 3: Managed to connect my laptop camera to opencv to replicate real-time footage from on-board camera.</p>
+                    <p>Total time: approx 3hrs</p>
                 </div>
                 <div class="card">
                     <h2>Valentines Day and opencv.</h2>
                     <h3>14th of February, 2022</h3>
-                    <p>  After a busy period of time I managed to make a good start on the software.
-                        The first couple of hours I spent fixing a bug in opencv as the documentation was not displaying for anything. 
-                        That required a clean install of python. 
-                        After that however, I managed to get opencv to play a video and crop a rectangle from the centre of the original video. 
-                        Valentines day well spent.</p>
+                    <p> After a busy period of time I managed to make a good start on the software. The first couple of hours I spent fixing a bug in opencv as the documentation was not displaying for anything. That required a clean install of python. After
+                        that however, I managed to get opencv to play a video and crop a rectangle from the centre of the original video. Valentines day well spent.</p>
                     <p>Total time: approx 5hrs</p>
                 </div>
                 <div class="card">
                     <h2>Project Outline.</h2>
                     <h3>5th of February, 2022</h3>
-                    <p> Worked on the project outline. Completed the first and second section. 
-                        Was unsure of what to list on the deliverables, going to bring this up in next supervisor meeting.
-                        I have also received the data for crabs and lobsters so I will need to start looking at YOLO and ways to process this.</p>
+                    <p> Worked on the project outline. Completed the first and second section. Was unsure of what to list on the deliverables, going to bring this up in next supervisor meeting. I have also received the data for crabs and lobsters so I will
+                        need to start looking at YOLO and ways to process this.</p>
                     <p>Total time: approx 3hrs</p>
                 </div>
                 <div class="card">
