--- a/feb.html
+++ b/feb.html
@@ -27,6 +27,14 @@
             <div class="leftcolumn">
                 <div class="card">
                     <h2>More opencv and trello.</h2>
+                    <h3>23rd of February, 2022</h3>
+                    <p> Have extracted all images from provided data.</p>
+                    <p>Tried setting up YOLO but did not have enough images, will do that next after labelling them though.</p>
+                    <p>Spent a lot of time trying to figure out how to get YOLO to work with what I have.</p>
+                    <p>Total time: approx 2hrs</p>
+                </div>
+                <div class="card">
+                    <h2>More opencv and trello.</h2>
                     <h3>15th of February, 2022</h3>
                     <p> Need to set up trello today to keep track of what I need to do/am doing.</p>
                     <p>Update: Set up trello and added all my tasks to it. Link: https://trello.com/b/PiACLT8c/major-project</p>
